--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,19 @@ matrix:
     - env: PYTHON_VERSION=3.7
 
 before_deploy:
-# extract the current trimesh version from the version file
+# extract the version from the version file
 - export PP_VERSION=`python -c "exec(open('pocketing/version.py','r').read()); print(__version__)"`
 # tag the release and if it's already tagged chill
 - git tag $PP_VERSION || true
+
+deploy:
+- provider: pypi
+  user: mikedh
+  on:
+    condition: $PYTHON_VERSION = '3.6'
+    branch: master
+  password: $PYPI_PW
+
 
 install:
 - if [[ "$PYTHON_VERSION" == "2.7" ]]; then wget --quiet https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh
