--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -1,37 +1,80 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
-
-name: Python application
+name: Test And Publish
 
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
+    branches:
+      - actions
 jobs:
-  build:
-
+  formatting:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.8
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v1
       with:
         python-version: 3.8
-    - name: Install dependencies
+    - name: Install Formatting
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    - name: Lint with flake8
+        pip install autopep8 flake8
+    - name: Check Formatting
       run: |
-        pip install flake8
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
+        flake8 tests
+        flake8 pocketing
+        flake8 examples
+        flake8 setup.py
+        autopep8 --recursive --aggressive --diff --exit-code pocketing/
+        autopep8 --recursive --aggressive --diff --exit-code examples/
+        autopep8 --recursive --aggressive --diff --exit-code tests/
+
+  tests:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        python-version: [2.7, 3.5, 3.6, 3.7, 3.8]
+        os: [ubuntu-latest, macos-latest]
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v1
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install APT On Linux
+      if: matrix.os == 'ubuntu-latest'
       run: |
-        pip install pytest
-        pytest
+        sudo apt-get update -qq -y
+        sudo apt-get install -qq -y libspatialindex-dev libgeos-dev
+    - name: Install Brew On Mac
+      if: matrix.os == 'macos-latest'
+      run: brew install spatialindex geos
+    - name: Install Pytest
+      run: |
+        python -m pip install --upgrade pip
+        pip install pytest pytest-cov setuptools
+        pip debug install -vv shapely
+    - name: Install Pocketing
+      run: pip install .
+    - name: Run Pytest
+      run: pytest
+
+
+  pypi:
+    needs: tests
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python
+      uses: actions/setup-python@v1
+      with:
+        python-version: '3.x'
+    - name: Install publishing dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install setuptools wheel twine
+    - name: Build and publish
+      env:
+        TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
+        TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+      run: |
+        python setup.py sdist bdist_wheel
+        twine upload dist/*
