--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -45,6 +45,7 @@ jobs:
       run: |
         sudo apt-get update -qq -y
         sudo apt-get install -qq -y libspatialindex-dev libgeos-dev
+        pip install pygeos
     - name: Install Brew On Mac
       if: matrix.os == 'macos-latest'
       run: brew install spatialindex geos
@@ -52,7 +53,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pytest pytest-cov setuptools
-        pip debug install -vv shapely
     - name: Install Pocketing
       run: pip install .
     - name: Run Pytest
